Move todobase.integrationtests to tests folder.

--- a/tests/todobase.integrationtests/todobase.integrationtests.csproj
+++ b/tests/todobase.integrationtests/todobase.integrationtests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\todobase\todobase.csproj" />
+    <ProjectReference Include="..\..\todobase\todobase.csproj" />
   </ItemGroup>
 
 </Project>
